--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,11 +7,15 @@ body {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
-   font-size: 1.5rem; 
+  font-size: 1.5rem;
+}
+
+ul {
+  list-style-image: url("../images/sword-32x32.png");
 }
